# recipes

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  cflib  config.pri  database.qrc  local.pri_example  receipts.pro  recipes.pro
cmake/modules/: coverage-build.cmake  scan-build.cmake
database/: db_scheme.sql  initial_data.sql  structure  test_data.sql
doc/: structure.md
recipes/: CMakeLists.txt  config.pri  local.pri_example  recipes.pro
recipes/clientcommon/: CMakeLists.txt  adminserviceinterface.cpp  adminserviceinterface.h  clientcontroller.cpp  userserviceinterface.cpp  userserviceinterface.h  usersmodel.cpp  usersmodel.h
recipes/common/: CMakeLists.txt  category.cpp  category.h  common.pro  ingredient.cpp  ingredient.h  instructionstep.cpp  instructionstep.h  jsonserialize.cpp  jsonserialize.h  locale2string.cpp  locale2string.h  log.cpp  log.h  permission.cpp  permission.h  permissiondata.cpp  permissiondata.h  portion.cpp  portion.h  recipe.cpp  recipe.h  unit.cpp  unit.h  user.cpp  user.h  util.cpp  util.h  waiter.cpp  waiter.h
recipes/console-client/: CMakeLists.txt  console-client.pro  console.cpp  console.h  consoleclient.cpp  consoleclient.h  logCategory.h  main.cpp  remote.cpp  remote.h
recipes/database/: CMakeLists.txt  database.cpp  database.h  database.pro  dbpermission.cpp  dbpermission.h  dbrecipe.cpp  dbrecipe.h  dbuser.cpp  dbuser.h  migrator.cpp  migrator.h  password.cpp  password.h
recipes/qml-client/: CMakeLists.txt  Login.qml  clientcontroller.cpp  clientcontroller.h  images.qrc  logcategory.h  main.cpp  main.qml  qml-client.pro  qml.qrc  recipesearchmodel.cpp  recipesearchmodel.h  servicemapper.cpp  servicemapper.h  userserviceinterface.cpp  userserviceinterface.h
recipes/qml-client/qml/: ImageButton.qml  Login.qml  StartPage.qml  main.qml
recipes/qml-client/qml/administration/: Administration.qml  Users.qml
recipes/qml-client/qml/createRecipe/: CreateRecipe.qml
recipes/qml-client/qml/search/: RecipeListDelegate.qml  Search.qml
recipes/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  server.pro
recipes/servercommon/: CMakeLists.txt  clientinfocache.cpp  clientinfocache.h  server.cpp  server.h  servercommon.pro
recipes/services/: CMakeLists.txt  adminservice.cpp  adminservice.h  logCategory.h  recipeservice.cpp  recipeservice.h  services.pro  userservice.cpp  userservice.h
src/common/: category.h  common.pro  util.cpp  util.h
src/console-client/: console-client.pro  console.cpp  console.h  consoleclient.h  main.cpp
src/database/: database.pro  dbgeneral.cpp  dbgeneral.h  dbrecipe.h
src/server/: main.cpp  server.pro
test/: CMakeLists.txt  database_test.cpp  database_test.h  service_test.cpp  service_test.h  test.pro  testserver.cpp  testserver.h  testtostrings.h
test/database_test/: CMakeLists.txt  database_test.cpp  database_test.h
test/service_test/: CMakeLists.txt  service_test.cpp  service_test.h
test/shared/: CMakeLists.txt  testserver.cpp  testserver.h  util.h
